// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTablePagination is rendered 1`] = `
<div
  class="euiFlexGroup eui-xScroll emotion-euiFlexGroup-wrap-s-spaceBetween-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiPopover emotion-euiPopover"
    >
      <div
        class="euiPopover__anchor css-16vtueo-render"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--xSmall css-wvaqcf-empty-text"
          data-test-subj="tablePaginationPopoverButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="arrowDown"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Rows per page: 50
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <nav
      aria-label="aria-label"
      class="euiPagination testClass1 testClass2 emotion-euiPagination-EuiPagination"
      data-test-subj="test subject string"
    >
      <span
        aria-atomic="true"
        aria-relevant="additions text"
        class="emotion-euiScreenReaderOnly"
        role="status"
      >
        Page 2 of 5
      </span>
      <button
        aria-label="Previous page"
        class="euiButtonIcon euiButtonIcon--xSmall euiPaginationArrowButton emotion-euiButtonIcon-empty-text-hoverStyles-euiPaginationArrowButton"
        data-test-subj="pagination-button-previous"
        title="Previous page"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowLeft"
        />
      </button>
      <ul
        aria-label="aria-label"
        class="euiPagination__list emotion-euiPagination__list"
      >
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 1 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-23ziaw-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-0"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                1
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-current="true"
            aria-label="Page 2 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-7ubx5w-empty-disabled-euiPaginationButton-isActive"
            data-test-subj="pagination-button-1"
            disabled=""
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                2
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 3 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-23ziaw-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-2"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                3
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 4 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-23ziaw-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-3"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                4
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 5 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-23ziaw-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-4"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                5
              </span>
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-label="Next page"
        class="euiButtonIcon euiButtonIcon--xSmall euiPaginationArrowButton emotion-euiButtonIcon-empty-text-hoverStyles-euiPaginationArrowButton"
        data-test-subj="pagination-button-next"
        title="Next page"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
    </nav>
  </div>
</div>
`;

exports[`EuiTablePagination is rendered when hiding the per page options 1`] = `
<div
  class="euiFlexGroup eui-xScroll emotion-euiFlexGroup-wrap-s-spaceBetween-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  />
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <nav
      aria-label="aria-label"
      class="euiPagination testClass1 testClass2 emotion-euiPagination-EuiPagination"
      data-test-subj="test subject string"
    >
      <span
        aria-atomic="true"
        aria-relevant="additions text"
        class="emotion-euiScreenReaderOnly"
        role="status"
      >
        Page 2 of 5
      </span>
      <button
        aria-label="Previous page"
        class="euiButtonIcon euiButtonIcon--xSmall euiPaginationArrowButton emotion-euiButtonIcon-empty-text-hoverStyles-euiPaginationArrowButton"
        data-test-subj="pagination-button-previous"
        title="Previous page"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowLeft"
        />
      </button>
      <ul
        aria-label="aria-label"
        class="euiPagination__list emotion-euiPagination__list"
      >
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 1 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-23ziaw-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-0"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                1
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-current="true"
            aria-label="Page 2 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-7ubx5w-empty-disabled-euiPaginationButton-isActive"
            data-test-subj="pagination-button-1"
            disabled=""
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                2
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 3 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-23ziaw-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-2"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                3
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 4 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-23ziaw-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-3"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                4
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 5 of 5"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-23ziaw-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-4"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                5
              </span>
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-label="Next page"
        class="euiButtonIcon euiButtonIcon--xSmall euiPaginationArrowButton emotion-euiButtonIcon-empty-text-hoverStyles-euiPaginationArrowButton"
        data-test-subj="pagination-button-next"
        title="Next page"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
    </nav>
  </div>
</div>
`;

exports[`EuiTablePagination renders a "show all" itemsPerPage option 1`] = `
<div
  class="euiFlexGroup eui-xScroll emotion-euiFlexGroup-wrap-s-spaceBetween-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiPopover emotion-euiPopover"
    >
      <div
        class="euiPopover__anchor css-16vtueo-render"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--xSmall css-wvaqcf-empty-text"
          data-test-subj="tablePaginationPopoverButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="arrowDown"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Showing all rows
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  />
</div>
`;
